--- a/lib/hyacinth_web/live/label_session_live/label.html.heex
+++ b/lib/hyacinth_web/live/label_session_live/label.html.heex
@@ -226,7 +226,7 @@
       <:header>Labeling Complete</:header>
 
       <div class="mt-3 space-y-3">
-        <%= live_redirect to: Routes.live_path(@socket, HyacinthWeb.ResultsLive.Show, @label_session), class: "btn btn-lg btn-blue btn-icon" do %>
+        <%= live_redirect to: Routes.results_show_path(@socket, :show_session, @label_session), class: "btn btn-lg btn-blue btn-icon" do %>
           <Icons.rectangle_stack_solid />
           <span>View Results</span>
         <% end %>
