--- a/lib/hyacinth_web/live/label_session_live/label.html.heex
+++ b/lib/hyacinth_web/live/label_session_live/label.html.heex
@@ -76,7 +76,12 @@
                 style="height: calc(100vh - 16rem);"
               />
             <% :advanced -> %>
-              <.live_component module={HyacinthWeb.ViewerLive.Viewers.AdvancedPNG} object_id={object.id} unique_id={i} id={"viewer-advanced-png-#{i}"} />
+              <.live_component
+                module={HyacinthWeb.ViewerLive.Viewers.AdvancedPNG}
+                object_id={object.id}
+                unique_id={"#{@element.id}-#{i}"}
+                id={"viewer-advanced-png-#{i}"}
+              />
             <% end %>
           </div>
         </div>
