--- a/lib/hyacinth_web/live/results_live/show.html.heex
+++ b/lib/hyacinth_web/live/results_live/show.html.heex
@@ -84,7 +84,7 @@
         <div class="mt-2 text-center">
           <div>
             <span class="text-gray-400 font-medium"><%= object.name %></span>
-            <%= live_redirect "(View)", to: Routes.live_path(@socket, HyacinthWeb.ViewerLive.Show, object), class: "link text-sm" %>
+            <%= link "(View)", to: Routes.viewer_show_path(@socket, :new_session, object), class: "link text-sm" %>
           </div>
 
           <div class="text-sm text-gray-500"><%= value %></div>
