--- a/lib/hyacinth_web/live/viewer_live/viewers/advanced_png.html.heex
+++ b/lib/hyacinth_web/live/viewer_live/viewers/advanced_png.html.heex
@@ -9,6 +9,7 @@
     data-object-id={@object.id}
     data-unique-id={@unique_id}
     data-collaboration-enabled={if(@collaboration, do: "true", else: "false")}
+    data-is-session-owner={if(@session_owner, do: "true", else: "false")}
   ></canvas>
 
   <div phx-update="ignore" id={"advanced-png-viewer-controls-#{@unique_id}"}>
