--- a/lib/hyacinth_web/live/viewer_live/show.html.heex
+++ b/lib/hyacinth_web/live/viewer_live/show.html.heex
@@ -1,19 +1,21 @@
-<header>
-  <.form let={f} for={@viewer_select_changeset} phx-change="form_change">
-    <div class="filter-form-content flex justify-between items-center">
-      <p>
-        <%= label f, :viewer %>
-        <%= select f, :viewer, humanize_enum(ViewerSelectForm, :viewer) %>
-      </p>
-    </div>
-  </.form>
-</header>
+<main class="mt-6 flex items-start">
+  <div class="w-2/3">
+    <%= case Ecto.Changeset.get_field(@viewer_select_changeset, :viewer) do %>
+      <% :web_image -> %>
+        <%= live_render(@socket, HyacinthWeb.ViewerLive.Viewers.WebImage, session: %{"object_id" => @object.id}, id: "viewer-web-image") %>
+      <% :advanced_png -> %>
+        <.live_component module={HyacinthWeb.ViewerLive.Viewers.AdvancedPNG} object_id={@object.id} collaboration={true} session_owner={@session_owner} id="viewer-advanced-png" />
+    <% end %>
+  </div>
 
-<main class="mt-6">
-  <%= case Ecto.Changeset.get_field(@viewer_select_changeset, :viewer) do %>
-    <% :web_image -> %>
-      <%= live_render(@socket, HyacinthWeb.ViewerLive.Viewers.WebImage, session: %{"object_id" => @object.id}, id: "viewer-web-image") %>
-    <% :advanced_png -> %>
-      <.live_component module={HyacinthWeb.ViewerLive.Viewers.AdvancedPNG} object_id={@object.id} collaboration={true} session_owner={@session_owner} id="viewer-advanced-png" />
-  <% end %>
+  <div class="card ml-6 w-1/3">
+    <div class="space-y-2">
+      <%= for user_meta <- @user_list do %>
+        <div class="flex items-center space-x-2">
+          <.user_profile_image user_name={user_meta.user_name} size="sm" />
+          <div class="text-gray-400"><%= user_meta.user_name %> (<%= user_meta.count %>)</div>
+        </div>
+      <% end %>
+    </div>
+  </div>
 </main>
