Clean up viewer

--- a/lib/hyacinth_web/live/viewer_live/show.html.heex
+++ b/lib/hyacinth_web/live/viewer_live/show.html.heex
@@ -1,11 +1,11 @@
 <main class="mt-6 flex items-start">
   <div class="w-2/3">
-    <%= case Ecto.Changeset.get_field(@viewer_select_changeset, :viewer) do %>
-      <% :web_image -> %>
-        <%= live_render(@socket, HyacinthWeb.ViewerLive.Viewers.WebImage, session: %{"object_id" => @object.id}, id: "viewer-web-image") %>
-      <% :advanced_png -> %>
-        <.live_component module={HyacinthWeb.ViewerLive.Viewers.AdvancedPNG} object_id={@object.id} collaboration={true} session_owner={@session_owner} id="viewer-advanced-png" />
-    <% end %>
+    <.live_component
+      module={HyacinthWeb.ViewerLive.Viewers.AdvancedPNG}
+      object_id={@object.id}
+      collaboration={true}
+      id="viewer-advanced-png"
+    />
   </div>
 
   <div class="card ml-6 w-1/3">
