--- a/lib/hyacinth_web/live/viewer_live/show.html.heex
+++ b/lib/hyacinth_web/live/viewer_live/show.html.heex
@@ -1,21 +1,44 @@
-<main class="mt-6 flex items-start">
-  <div class="w-2/3">
+<main class="mt-6 mx-auto max-w-screen-2xl flex items-start">
+  <div class="w-3/4">
+    <%= if @object do %>
     <.live_component
       module={HyacinthWeb.ViewerLive.Viewers.AdvancedPNG}
+      unique_id={@object.id}
       object_id={@object.id}
       collaboration={true}
       id="viewer-advanced-png"
     />
+    <% end %>
   </div>
 
-  <div class="card ml-6 w-1/3">
-    <div class="space-y-2">
-      <%= for user_meta <- @user_list do %>
-        <div class="flex items-center space-x-2">
-          <.user_profile_image user_name={user_meta.user_name} size="sm" />
-          <div class="text-gray-400"><%= user_meta.user_name %> (<%= user_meta.count %>)</div>
+  <div class="card ml-6 w-1/4">
+    <div>
+      <.form let={f} for={@object_form_changeset} phx-change="object_form_change">
+        <div class="w-full form-content">
+          <p class="w-full">
+            <%= label f, :dataset_id %>
+            <%= select f, :dataset_id, Enum.map(@datasets, fn d -> {d.name, d.id} end), class: "!w-full" %>
+          </p>
+
+          <p class="w-full">
+            <%= label f, :object_id %>
+            <%= select f, :object_id, Enum.map(@objects, fn o -> {o.name, o.id} end), class: "!w-full" %>
+          </p>
         </div>
-      <% end %>
+      </.form>
+    </div>
+
+    <div class="mt-4 pb-1">
+      <div class="text-sm text-gray-400 font-medium">Users</div>
+
+      <div class="mt-1 space-y-2">
+        <%= for user_meta <- @user_list do %>
+          <div class="flex items-center space-x-2">
+            <.user_profile_image user_name={user_meta.user_name} size="sm" />
+            <div class="text-gray-400"><%= user_meta.user_name %> (<%= user_meta.count %>)</div>
+          </div>
+        <% end %>
+      </div>
     </div>
   </div>
 </main>
