--- a/lib/hyacinth_web/live/label_session_live/show.html.heex
+++ b/lib/hyacinth_web/live/label_session_live/show.html.heex
@@ -98,7 +98,7 @@
       <div>
         <button class="text-btn text-btn-blue text-btn-icon" phx-click="open_modal_export_labels">
           <span>Export</span>
-          <Icons.pencil_square_mini />
+          <Icons.arrow_top_right_on_square_mini />
         </button>
       </div>
     </div>
